@@ -17,7 +17,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -31,38 +30,40 @@ public class SecurityConfig {
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
 
         http
-            // 🔥 CRITICAL: CORS must be configured FIRST
+            // ⭐ MUST BE FIRST
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(csrf -> csrf.disable())
             .authorizeHttpRequests(auth -> auth
-                // 🔥 OPTIONS requests MUST be permitAll
+
+                // ⭐ ALLOW PRE-FLIGHT
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-                // PUBLIC endpoints
+                // ⭐ PUBLIC ENDPOINTS
                 .requestMatchers("/api/auth/**").permitAll()
                 .requestMatchers(HttpMethod.GET, "/api/courses/**").permitAll()
                 .requestMatchers(HttpMethod.GET, "/api/reviews/**").permitAll()
                 .requestMatchers("/actuator/health").permitAll()
-                .requestMatchers("/", "/health").permitAll()
+                .requestMatchers("/health").permitAll()
+                .requestMatchers("/").permitAll()
 
-                // USER endpoints
+                // ⭐ USER ENDPOINTS
                 .requestMatchers("/api/enroll/**").hasAuthority("ROLE_USER")
                 .requestMatchers(HttpMethod.POST, "/api/checkout/confirm/**").hasAuthority("ROLE_USER")
                 .requestMatchers(HttpMethod.POST, "/api/reviews/**").authenticated()
 
-                // ADMIN endpoints
+                // ⭐ ADMIN ENDPOINTS
                 .requestMatchers("/api/admin/**").hasAuthority("ROLE_ADMIN")
                 .requestMatchers(HttpMethod.POST, "/api/courses/add").hasAuthority("ROLE_ADMIN")
                 .requestMatchers(HttpMethod.DELETE, "/api/admin/delete-course/**").hasAuthority("ROLE_ADMIN")
 
-                // Everything else requires authentication
+                // ⭐ EVERYTHING ELSE
                 .anyRequest().authenticated()
             )
-            .sessionManagement(session -> 
-                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+            .sessionManagement(session ->
+                    session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             );
 
-        // Add JWT filter
+        // ⭐ ADD JWT FILTER
         http.addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -70,38 +71,38 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+
         CorsConfiguration config = new CorsConfiguration();
 
-        // 🔥 CRITICAL: Allow your frontend origins
-        config.setAllowedOrigins(Arrays.asList(
+        // ⭐ MOST IMPORTANT PART — USE PATTERNS INSTEAD OF setAllowedOrigins
+        config.setAllowedOriginPatterns(List.of(
                 "https://online-course-platform-eosin.vercel.app",
-                "http://localhost:3000",
-                "http://localhost:3001"
+                "http://localhost:*",
+                "https://*.railway.app",
+                "https://devoted-heart-production.up.railway.app"
         ));
 
-        // 🔥 Allow all HTTP methods
-        config.setAllowedMethods(Arrays.asList(
+        // ⭐ ALLOW ALL METHODS
+        config.setAllowedMethods(List.of(
                 "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
         ));
 
-        // 🔥 Allow all headers
+        // ⭐ ALLOW ALL HEADERS
         config.setAllowedHeaders(List.of("*"));
 
-        // 🔥 Expose all headers
-        config.setExposedHeaders(Arrays.asList(
+        // ⭐ EXPOSE HEADERS (OPTIONAL BUT GOOD)
+        config.setExposedHeaders(List.of(
                 "Authorization",
                 "Content-Type",
                 "X-Requested-With",
                 "Accept",
-                "Origin",
-                "Access-Control-Request-Method",
-                "Access-Control-Request-Headers"
+                "Origin"
         ));
 
-        // 🔥 CRITICAL: Must be true for credentials
+        // ⭐ MUST BE TRUE FOR COOKIES / JWT
         config.setAllowCredentials(true);
 
-        // 🔥 Cache preflight response for 1 hour
+        // ⭐ SPEED UP PREFLIGHT
         config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
